Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/search_settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Setting to control search functions.</description>
    <label>Search Settings</label>
</CustomObject>