Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/Additional_Search_Criteria_Expanded__c.field-meta.xml
<CustomField>
    <fullName>Additional_Search_Criteria_Expanded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the Additional Search Criteria will be presented as expanded to the user. If no selected (default), this section will appear collapsed.</description>
    <inlineHelpText>When selected, the Additional Search Criteria will be presented as expanded to the user. If no selected (default), this section will appear collapsed.</inlineHelpText>
    <label>Additional Search Criteria Expanded</label>
    <type>Checkbox</type>
</CustomField>