Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/button_custom1_label__c.field-meta.xml
<CustomField>
    <fullName>button_custom1_label__c</fullName>
    <description>Value entered here will be the name of the button within the Search Results.  The name should represent the type of action the button will perform.</description>
    <inlineHelpText>Value entered here will be the name of the button within the Search Results.  The name should represent the type of action the button will perform.</inlineHelpText>
    <label>Button Custom1 Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>