Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/button_custom1_needselection__c.field-meta.xml
<CustomField>
    <fullName>button_custom1_needselection__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If select (Checked), the button will only work if 1 or more contacts are selected from the search results.

If not selected (unchecked), the button will perform the action even if there are not contacts selected from the search results.</description>
    <inlineHelpText>If select (Checked), the button will only work if 1 or more contacts are selected from the search results.

If not selected (unchecked), the button will perform the action even if there are not contacts selected from the search results.</inlineHelpText>
    <label>Button Custom1 NeedSelection</label>
    <type>Checkbox</type>
</CustomField>