Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/button_custom1_searchmode__c.field-meta.xml
<CustomField>
    <fullName>button_custom1_searchmode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected (Checked), the button will it will ONLY be displayed after a user performs a search and will NOT be displayed from viewing results from the History tab.

If not selected (Unchecked), the custom button will appear all the time.</description>
    <inlineHelpText>If selected (Checked), the button will it will ONLY be displayed after a user performs a search and will NOT be displayed from viewing results from the History tab.

If not selected (Unchecked), the custom button will appear all the time.</inlineHelpText>
    <label>Button Custom1 SearchMode</label>
    <type>Checkbox</type>
</CustomField>