Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/contact_match_field__c.field-meta.xml
<CustomField>
    <fullName>contact_match_field__c</fullName>
    <defaultValue>&quot;Text_Resume__c&quot;</defaultValue>
    <description>This field identifies the field on the Contact Object that will be used to perform the search against.  The default field is, Text_Resume__c.  The Full API Name is required to be entered into this field to work properly.</description>
    <inlineHelpText>This field identifies the field on the Contact Object that will be used to perform the search against.  The default field is, Text_Resume__c.</inlineHelpText>
    <label>Contact Match Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>