Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/Customized_Search__c.field-meta.xml
<CustomField>
    <fullName>Customized_Search__c</fullName>
    <label>Customized Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>