Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/Default_Search_Tab__c.field-meta.xml
<CustomField>
    <fullName>Default_Search_Tab__c</fullName>
    <description>This determines which Search Sub-Tab the user will land on when accessing the Advanced Contact Search feature.</description>
    <inlineHelpText>This determines which Search Sub-Tab the user will land on when accessing the Advanced Contact Search feature.</inlineHelpText>
    <label>Default Search Tab</label>
    <length>80</length>
    <type>Text</type>
</CustomField>