Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/disable_parsed_company_fields__c.field-meta.xml
<CustomField>
    <fullName>disable_parsed_company_fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, a keyword search using the Company input field will not search the parsed Employer Organization 1, Employer Organization 2, and Employer Organization 3 fields on the Contact record. The Company Name on the Employment History object will be searched.</description>
    <inlineHelpText>If selected, a keyword search using the Company input field will not search the parsed Employer Organization 1, 2, and 3 fields on the Contact record. The Company Name on the Employment History object will be searched.</inlineHelpText>
    <label>Disable Parsed Company fields</label>
    <type>Checkbox</type>
</CustomField>