Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/disable_parsed_school_fields__c.field-meta.xml
<CustomField>
    <fullName>disable_parsed_school_fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, a keyword search using the School input field will not search the parsed Education School 1 and Education School 2 fields on the Contact record. The School Name on the Employment History object will be searched.</description>
    <inlineHelpText>If selected, a keyword search using the School input field will not search the parsed Education School 1 and Education School 2 fields on the Contact record. The School Name on the Employment History object will be searched.</inlineHelpText>
    <label>Disable Parsed School fields</label>
    <type>Checkbox</type>
</CustomField>