Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/hide_tab_history__c.field-meta.xml
<CustomField>
    <fullName>hide_tab_history__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, this setting will Hide the History Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the History Tab.</description>
    <inlineHelpText>When selected, this setting will Hide the History Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the History Tab.</inlineHelpText>
    <label>Hide Tab History</label>
    <type>Checkbox</type>
</CustomField>