Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/hide_tab_keyword__c.field-meta.xml
<CustomField>
    <fullName>hide_tab_keyword__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, this setting will Hide the Keyword Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the Keyword Tab.</description>
    <inlineHelpText>When selected, this setting will Hide the Keyword Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the Keyword Tab.</inlineHelpText>
    <label>Hide Tab Keyword</label>
    <type>Checkbox</type>
</CustomField>