Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/hide_tab_match__c.field-meta.xml
<CustomField>
    <fullName>hide_tab_match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, this setting will Hide the Match Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the Match Tab.</description>
    <inlineHelpText>When selected, this setting will Hide the Match Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the Match Tab.</inlineHelpText>
    <label>Hide Tab Match</label>
    <type>Checkbox</type>
</CustomField>