Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/hide_tab_quick_boolean__c.field-meta.xml
<CustomField>
    <fullName>hide_tab_quick_boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, this setting will hide the Quick Boolean Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the Quick Boolean Tab.</description>
    <inlineHelpText>When selected, this setting will hide the Quick Boolean Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the Quick Boolean Tab.</inlineHelpText>
    <label>Hide Tab Quick Boolean</label>
    <type>Checkbox</type>
</CustomField>