Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/hide_tab_saved__c.field-meta.xml
<CustomField>
    <fullName>hide_tab_saved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, this setting will hide the Saved Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the Saved Tab.</description>
    <inlineHelpText>When selected, this setting will hide the Saved Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the Saved Tab.</inlineHelpText>
    <label>Hide Tab Saved</label>
    <type>Checkbox</type>
</CustomField>