Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/hide_tab_skills__c.field-meta.xml
<CustomField>
    <fullName>hide_tab_skills__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, this setting will hide the Skills Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the Skills Tab.</description>
    <inlineHelpText>When selected, this setting will hide the Skills Sub-Tab within the Advanced Contact Search feature.  By Default, this setting is disabled and will show the Skills Tab.</inlineHelpText>
    <label>Hide Tab Skills</label>
    <type>Checkbox</type>
</CustomField>