Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/job_match_field__c.field-meta.xml
<CustomField>
    <fullName>job_match_field__c</fullName>
    <defaultValue>&quot;Job_Description__c&quot;</defaultValue>
    <description>This field identifies the field on the Job Object that will be used to perform the search against.  The default field is, Job_Description__c.  The Full API Name is required to be entered into this field to work properly.</description>
    <inlineHelpText>This field identifies the field on the Contact Object that will be used to perform the search against.  The default field is, Job_Description__c.</inlineHelpText>
    <label>Job Match Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>