Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/job_match_show__c.field-meta.xml
<CustomField>
    <fullName>job_match_show__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field identifies whether the Job Match field appears on the Match Search tab.</description>
    <inlineHelpText>This field identifies whether the Job Match field appears on the Match Search tab.</inlineHelpText>
    <label>Job Match Show</label>
    <type>Checkbox</type>
</CustomField>