Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/project_match_field__c.field-meta.xml
<CustomField>
    <fullName>project_match_field__c</fullName>
    <description>This field identifies the field on the Project Object that will be used to perform the search against.  The Full API Name is required to be entered into this field to work properly.</description>
    <inlineHelpText>This field identifies the field on the Project Object that will be used to perform the search against.</inlineHelpText>
    <label>Project Match Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>