Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/project_match_show__c.field-meta.xml
<CustomField>
    <fullName>project_match_show__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies whether the Project Match field appears on the Match Search tab.</description>
    <inlineHelpText>This field identifies whether the Project Match field appears on the Match Search tab.</inlineHelpText>
    <label>Project Match Show</label>
    <type>Checkbox</type>
</CustomField>