Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/Radius_Search_Units__c.field-meta.xml
<CustomField>
    <fullName>Radius_Search_Units__c</fullName>
    <description>This field identifies the measurement systems Radius Search values. It can be &apos;Miles&apos; or &apos;mi&apos;, or &apos;Kilometers&apos; or &apos;km&apos;. The default value is &apos;mi&apos;.</description>
    <inlineHelpText>This field identifies the measurement systems Radius Search values. It can be &apos;Miles&apos; or &apos;mi&apos;, or &apos;Kilometers&apos; or &apos;km&apos;. The default value is &apos;mi&apos;.</inlineHelpText>
    <label>Radius Search Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>