Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/search_related_objects__c.field-meta.xml
<CustomField>
    <fullName>search_related_objects__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Perform SOSL Search in Employment History, Education History, Skill.</description>
    <inlineHelpText>If selected, selected fields on the Keyword Search will search in related objects (Employment History, Education History, Skill). It can reduce the limit of maximum Contacts found.</inlineHelpText>
    <label>Search Related objects</label>
    <type>Checkbox</type>
</CustomField>