Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/search_standard_title__c.field-meta.xml
<CustomField>
    <fullName>search_standard_title__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the standard Force.com Title field on the Contact record will be
searched when using the Title input within Keyword Search.</description>
    <inlineHelpText>If selected, the standard Force.com Title field on the Contact record will be
searched when using the Title input within Keyword Search.</inlineHelpText>
    <label>Search Standard Title</label>
    <type>Checkbox</type>
</CustomField>