Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/show_button_addskills__c.field-meta.xml
<CustomField>
    <fullName>show_button_addskills__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field identifies whether the Add Skills button appears in the Search Results.</description>
    <inlineHelpText>This field identifies whether the Add Skills button appears in the Search Results.</inlineHelpText>
    <label>Show Button AddSkills</label>
    <type>Checkbox</type>
</CustomField>