Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/show_button_addtags__c.field-meta.xml
<CustomField>
    <fullName>show_button_addtags__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field identifies whether the Add Tags button appears in the Search Results.</description>
    <inlineHelpText>This field identifies whether the Add Tags button appears in the Search Results.</inlineHelpText>
    <label>Show Button AddTags</label>
    <type>Checkbox</type>
</CustomField>