Frankbelford/uatv1ba/force-app/main/default/objects/search_settings__c/fields/show_button_applytojob__c.field-meta.xml
<CustomField>
    <fullName>show_button_applytojob__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field identifies whether the Apply to Job button appears in the Search Results.</description>
    <inlineHelpText>This field identifies whether the Apply to Job button appears in the Search Results.</inlineHelpText>
    <label>Show Button ApplyToJob</label>
    <type>Checkbox</type>
</CustomField>